--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # PASTE YOUR GUILDED/DISCORD WEBHOOK URL AFTER THE `=` SIGN
-WEBHOOK_URL=
+WEBHOOK_URL=https://discord.com/api/webhooks/1227351562108796959/Qfh3i9jwm-51wd3HxN9tmb-VUXER-QvdaELvUgX7K22ZZMnQ1GSbYf_qQ4EVw12DVM7f
